Fixed styling on sidebar refresh button

--- a/src/index.pcss
+++ b/src/index.pcss
@@ -37,6 +37,10 @@
     @apply n-mr-token-2 n-w-4 n-h-4;
   }
 
+  .btn-icon-base-r-m {
+    @apply n-ml-token-3 n-w-5 n-h-5;
+  }
+
   .btn-icon-base-r {
     @apply n-ml-token-3 n-w-6 n-h-6;
   }
