Fix compact x wrapping

--- a/src/index.pcss
+++ b/src/index.pcss
@@ -74,6 +74,11 @@
     @apply n-ml-token-3;
   }
 
+  /* DataGrid overrides */
+  .MuiDataGrid-footerContainer > div {
+    @apply n-mt-0;
+  }
+
   /* Make bullet list points in Markdown card view */
   .card-view ul {
     @apply n-list-disc n-ml-token-7;
