link out feature

--- a/src/index.pcss
+++ b/src/index.pcss
@@ -2,6 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
+.anchor {
+  text-decoration: underline;
+  text-decoration-thickness: 2px;
+  text-underline-offset: 4px;
+  text-decoration-color: blue;
+  color: blue;
+}
+
 /* Create CSS class based components */
 /* https://tailwindcss.com/docs/reusing-styles#extracting-classes-with-apply */
 @layer components {
