allow html tags in reports, add toggle to enable or disable html

--- a/src/index.pcss
+++ b/src/index.pcss
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+a {
+  @apply anchor;
+}
+
 .anchor {
   text-decoration: underline;
   text-decoration-thickness: 2px;
